target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'void'", "'auto'", 
                     "'integer'", "'float'", "'boolean'", "'string'", "'array'", 
                     "'inherit'", "'function'", "'true'", "'false'", "'for'", 
                     "'while'", "'do'", "'break'", "'continue'", "'return'", 
                     "'if'", "'else'", "'of'", "'out'", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'::'", 
                     "'.'", "','", "';'", "':'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WS", "CCOMMENT", 
                      "CPPCOMMENT", "KWVOID", "KWAUTO", "KWINT", "KWFLOAT", 
                      "KWBOO", "KWSTR", "KWARR", "KWINHERIT", "KWFUNC", 
                      "KWTRUE", "KWFALSE", "KWFOR", "KWWHILE", "KWDO", "KWBRK", 
                      "KWCONT", "KWRTN", "KWIF", "KWELSE", "KWOF", "KWOUT", 
                      "ID", "ADDOP", "SUBOP", "MULOP", "DIVOP", "MODOP", 
                      "EXCOP", "ANDOP", "OROP", "EQLOP", "DIFOP", "LARGEOP", 
                      "LEQLOP", "SMALLOP", "SEQLOP", "CONCATOP", "DOT", 
                      "CM", "SM", "CL", "LB", "RB", "LSB", "RSB", "LCB", 
                      "RCB", "EQL", "LITINT", "LITFLOAT", "LITSTR", "ILLEGAL_ESCAPE", 
                      "UNCLOSED_STRING", "ERROR_CHAR" ]

    RULE_litboo = 0
    RULE_program = 1
    RULE_declist = 2
    RULE_decl = 3
    RULE_vardecl = 4
    RULE_idlist = 5
    RULE_ids = 6
    RULE_middle = 7
    RULE_litarr = 8
    RULE_vartyp = 9
    RULE_idxlist = 10
    RULE_idxs = 11
    RULE_funcdecl = 12
    RULE_paralist = 13
    RULE_paras = 14
    RULE_paradecl = 15
    RULE_functyp = 16
    RULE_bodylist = 17
    RULE_body = 18
    RULE_stmt = 19
    RULE_assignstmt = 20
    RULE_ifstmt = 21
    RULE_matchstmt = 22
    RULE_unmatchstmt = 23
    RULE_forstmt = 24
    RULE_whilestmt = 25
    RULE_dowhilestmt = 26
    RULE_breakstmt = 27
    RULE_continuestmt = 28
    RULE_rtnstmt = 29
    RULE_callstmt = 30
    RULE_blockstmt = 31
    RULE_exprlist = 32
    RULE_exprs = 33
    RULE_expr = 34
    RULE_expr1 = 35
    RULE_expr2 = 36
    RULE_expr3 = 37
    RULE_expr4 = 38
    RULE_expr5 = 39
    RULE_expr6 = 40
    RULE_operand = 41
    RULE_idxop = 42
    RULE_funccall = 43
    RULE_subexpr = 44
    RULE_specialfunc = 45

    ruleNames =  [ "litboo", "program", "declist", "decl", "vardecl", "idlist", 
                   "ids", "middle", "litarr", "vartyp", "idxlist", "idxs", 
                   "funcdecl", "paralist", "paras", "paradecl", "functyp", 
                   "bodylist", "body", "stmt", "assignstmt", "ifstmt", "matchstmt", 
                   "unmatchstmt", "forstmt", "whilestmt", "dowhilestmt", 
                   "breakstmt", "continuestmt", "rtnstmt", "callstmt", "blockstmt", 
                   "exprlist", "exprs", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "operand", "idxop", "funccall", 
                   "subexpr", "specialfunc" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    WS=11
    CCOMMENT=12
    CPPCOMMENT=13
    KWVOID=14
    KWAUTO=15
    KWINT=16
    KWFLOAT=17
    KWBOO=18
    KWSTR=19
    KWARR=20
    KWINHERIT=21
    KWFUNC=22
    KWTRUE=23
    KWFALSE=24
    KWFOR=25
    KWWHILE=26
    KWDO=27
    KWBRK=28
    KWCONT=29
    KWRTN=30
    KWIF=31
    KWELSE=32
    KWOF=33
    KWOUT=34
    ID=35
    ADDOP=36
    SUBOP=37
    MULOP=38
    DIVOP=39
    MODOP=40
    EXCOP=41
    ANDOP=42
    OROP=43
    EQLOP=44
    DIFOP=45
    LARGEOP=46
    LEQLOP=47
    SMALLOP=48
    SEQLOP=49
    CONCATOP=50
    DOT=51
    CM=52
    SM=53
    CL=54
    LB=55
    RB=56
    LSB=57
    RSB=58
    LCB=59
    RCB=60
    EQL=61
    LITINT=62
    LITFLOAT=63
    LITSTR=64
    ILLEGAL_ESCAPE=65
    UNCLOSED_STRING=66
    ERROR_CHAR=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LitbooContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KWTRUE(self):
            return self.getToken(MT22Parser.KWTRUE, 0)

        def KWFALSE(self):
            return self.getToken(MT22Parser.KWFALSE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_litboo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLitboo" ):
                return visitor.visitLitboo(self)
            else:
                return visitor.visitChildren(self)




    def litboo(self):

        localctx = MT22Parser.LitbooContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_litboo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==MT22Parser.KWTRUE or _la==MT22Parser.KWFALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declist(self):
            return self.getTypedRuleContext(MT22Parser.DeclistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.declist()
            self.state = 95
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def declist(self):
            return self.getTypedRuleContext(MT22Parser.DeclistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclist" ):
                return visitor.visitDeclist(self)
            else:
                return visitor.visitChildren(self)




    def declist(self):

        localctx = MT22Parser.DeclistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declist)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.decl()
                self.state = 98
                self.declist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def paradecl(self):
            return self.getTypedRuleContext(MT22Parser.ParadeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.funcdecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.paradecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def vartyp(self):
            return self.getTypedRuleContext(MT22Parser.VartypContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def KWARR(self):
            return self.getToken(MT22Parser.KWARR, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def idxlist(self):
            return self.getTypedRuleContext(MT22Parser.IdxlistContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def KWOF(self):
            return self.getToken(MT22Parser.KWOF, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def middle(self):
            return self.getTypedRuleContext(MT22Parser.MiddleContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.idlist()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.KWARR:
                    self.state = 109
                    self.match(MT22Parser.KWARR)
                    self.state = 110
                    self.match(MT22Parser.LSB)
                    self.state = 111
                    self.idxlist()
                    self.state = 112
                    self.match(MT22Parser.RSB)
                    self.state = 113
                    self.match(MT22Parser.KWOF)


                self.state = 117
                self.match(MT22Parser.CL)
                self.state = 118
                self.vartyp()
                self.state = 119
                self.match(MT22Parser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(MT22Parser.ID)
                self.state = 122
                self.middle()
                self.state = 123
                self.expr()
                self.state = 124
                self.match(MT22Parser.SM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def ids(self):
            return self.getTypedRuleContext(MT22Parser.IdsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(MT22Parser.ID)
                self.state = 129
                self.ids()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def ids(self):
            return self.getTypedRuleContext(MT22Parser.IdsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_ids

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIds" ):
                return visitor.visitIds(self)
            else:
                return visitor.visitChildren(self)




    def ids(self):

        localctx = MT22Parser.IdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ids)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(MT22Parser.CM)
                self.state = 134
                self.match(MT22Parser.ID)
                self.state = 135
                self.ids()
                pass
            elif token in [MT22Parser.KWARR, MT22Parser.CL]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MiddleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def middle(self):
            return self.getTypedRuleContext(MT22Parser.MiddleContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def EQL(self):
            return self.getToken(MT22Parser.EQL, 0)

        def vartyp(self):
            return self.getTypedRuleContext(MT22Parser.VartypContext,0)


        def KWAUTO(self):
            return self.getToken(MT22Parser.KWAUTO, 0)

        def KWARR(self):
            return self.getToken(MT22Parser.KWARR, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def idxlist(self):
            return self.getTypedRuleContext(MT22Parser.IdxlistContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def KWOF(self):
            return self.getToken(MT22Parser.KWOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_middle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMiddle" ):
                return visitor.visitMiddle(self)
            else:
                return visitor.visitChildren(self)




    def middle(self):

        localctx = MT22Parser.MiddleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_middle)
        self._la = 0 # Token type
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(MT22Parser.CM)
                self.state = 140
                self.match(MT22Parser.ID)
                self.state = 141
                self.middle()
                self.state = 142
                self.expr()
                self.state = 143
                self.match(MT22Parser.CM)
                pass
            elif token in [MT22Parser.CL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(MT22Parser.CL)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.KWARR:
                    self.state = 146
                    self.match(MT22Parser.KWARR)
                    self.state = 147
                    self.match(MT22Parser.LSB)
                    self.state = 148
                    self.idxlist()
                    self.state = 149
                    self.match(MT22Parser.RSB)
                    self.state = 150
                    self.match(MT22Parser.KWOF)


                self.state = 156
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.KWINT, MT22Parser.KWFLOAT, MT22Parser.KWBOO, MT22Parser.KWSTR]:
                    self.state = 154
                    self.vartyp()
                    pass
                elif token in [MT22Parser.KWAUTO]:
                    self.state = 155
                    self.match(MT22Parser.KWAUTO)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 158
                self.match(MT22Parser.EQL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LitarrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_litarr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLitarr" ):
                return visitor.visitLitarr(self)
            else:
                return visitor.visitChildren(self)




    def litarr(self):

        localctx = MT22Parser.LitarrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_litarr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(MT22Parser.LCB)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 23)) & ~0x3f) == 0 and ((1 << (_la - 23)) & ((1 << (MT22Parser.KWTRUE - 23)) | (1 << (MT22Parser.KWFALSE - 23)) | (1 << (MT22Parser.ID - 23)) | (1 << (MT22Parser.SUBOP - 23)) | (1 << (MT22Parser.EXCOP - 23)) | (1 << (MT22Parser.LB - 23)) | (1 << (MT22Parser.LCB - 23)) | (1 << (MT22Parser.LITINT - 23)) | (1 << (MT22Parser.LITFLOAT - 23)) | (1 << (MT22Parser.LITSTR - 23)))) != 0):
                self.state = 162
                self.exprlist()


            self.state = 165
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KWINT(self):
            return self.getToken(MT22Parser.KWINT, 0)

        def KWFLOAT(self):
            return self.getToken(MT22Parser.KWFLOAT, 0)

        def KWBOO(self):
            return self.getToken(MT22Parser.KWBOO, 0)

        def KWSTR(self):
            return self.getToken(MT22Parser.KWSTR, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vartyp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartyp" ):
                return visitor.visitVartyp(self)
            else:
                return visitor.visitChildren(self)




    def vartyp(self):

        localctx = MT22Parser.VartypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vartyp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.KWINT) | (1 << MT22Parser.KWFLOAT) | (1 << MT22Parser.KWBOO) | (1 << MT22Parser.KWSTR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdxlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idxs(self):
            return self.getTypedRuleContext(MT22Parser.IdxsContext,0)


        def LITINT(self):
            return self.getToken(MT22Parser.LITINT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_idxlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdxlist" ):
                return visitor.visitIdxlist(self)
            else:
                return visitor.visitChildren(self)




    def idxlist(self):

        localctx = MT22Parser.IdxlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_idxlist)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                _la = self._input.LA(1)
                if not(_la==MT22Parser.ID or _la==MT22Parser.LITINT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 170
                self.idxs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                _la = self._input.LA(1)
                if not(_la==MT22Parser.ID or _la==MT22Parser.LITINT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdxsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def idxs(self):
            return self.getTypedRuleContext(MT22Parser.IdxsContext,0)


        def LITINT(self):
            return self.getToken(MT22Parser.LITINT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_idxs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdxs" ):
                return visitor.visitIdxs(self)
            else:
                return visitor.visitChildren(self)




    def idxs(self):

        localctx = MT22Parser.IdxsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_idxs)
        self._la = 0 # Token type
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.match(MT22Parser.CM)
                self.state = 175
                _la = self._input.LA(1)
                if not(_la==MT22Parser.ID or _la==MT22Parser.LITINT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 176
                self.idxs()
                pass
            elif token in [MT22Parser.RSB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
